# fire-log-to-stdout

./: Cargo.toml
src/: lib.rs
