
[package]
name = "fire-log-to-stdout"
version = "0.1.1"
edition = "2018"

description = "A small logging library outputting to stdout. Configuration is done using environment variables."
keywords = ["logging", "stdout", "env"]
categories = ["development-tools::debugging"]
authors = ["Sören Meier <soeren@s-me.ch>"]
homepage = "https://fire-lib.com/"
repository = "https://github.com/fire-lib/fire-log-to-stdout"
license = "MIT OR Apache-2.0"

[features]
default = ["log_time"]
log_time = ["chrono"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }